unpackaged/main/default/objects/Account/fields/EDFBIZ_Company_Policy_Memberships__c.field-meta.xml
<CustomField>
    <fullName>EDFBIZ_Company_Policy_Memberships__c</fullName>
    <description>These are coalitions or initiatives by companies to actively advance or lobby for climate policy at the federal, state, and local levels.</description>
    <inlineHelpText>These are coalitions or initiatives by companies to actively advance or lobby for climate policy at the federal, state, and local levels.</inlineHelpText>
    <label>EDFBIZ Company Policy Memberships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BICEP</fullName>
            </value>
            <value>
                <fullName>BELC</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CLC</fullName>
            </value>
            <value>
                <fullName>WMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>