unpackaged/main/default/objects/Account/fields/EDFBIZ_Tags__c.field-meta.xml
<CustomField>
    <fullName>EDFBIZ_Tags__c</fullName>
    <label>EDFBIZ Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDFBIZ Top Company</fullName>
            </value>
            <value>
                <fullName>F100</fullName>
            </value>
            <value>
                <fullName>Consumer Health Target Company</fullName>
            </value>
            <value>
                <fullName>Deforestation Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>