unpackaged/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address to contact the Organization as a whole. Emails to contact individual people having Affiliations with the Organization should be kept at those individual people's Contact records.</description>
    <inlineHelpText>Email address to contact the Organization as a whole.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>