unpackaged/main/default/objects/Account/fields/Email_Undeliverable__c.field-meta.xml
<CustomField>
    <fullName>Email_Undeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Undeliverable indicates the email isn't valid.</description>
    <inlineHelpText>Email address is not valid.</inlineHelpText>
    <label>Email Undeliverable</label>
    <type>Checkbox</type>
</CustomField>