unpackaged/main/default/objects/Account/fields/Entity_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>Entity_Interest_Account_EDF__c</fullName>
    <inlineHelpText>EDF Entity in which the constituent is interested, either by self-identification or Development assigned</inlineHelpText>
    <label>Entity Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>