unpackaged/main/default/objects/Account/fields/Environmental_Giving_Rating__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Giving_Rating__c</fullName>
    <inlineHelpText>Completed by Prospect Research, the amount that a constituent may be able to donate to environmental work</inlineHelpText>
    <label>Environmental Giving Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capacity</valueSetName>
    </valueSet>
</CustomField>