unpackaged/main/default/objects/Account/fields/Estate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Estate_Notes__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Estate Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>