unpackaged/main/default/objects/Account/fields/Estate_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Estate_Notification_Date__c</fullName>
    <label>Estate Notification Date</label>
    <type>Date</type>
</CustomField>