unpackaged/main/default/objects/Account/fields/Estate_Status__c.field-meta.xml
<CustomField>
    <fullName>Estate_Status__c</fullName>
    <inlineHelpText>The stage of estate administration</inlineHelpText>
    <label>Estate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDNO - Contingency did not occur</fullName>
            </value>
            <value>
                <fullName>CLBQ – Closed estate</fullName>
            </value>
            <value>
                <fullName>MATR - Donor Deceased waiting for distribution</fullName>
            </value>
            <value>
                <fullName>CDNO –Contingency did not occur</fullName>
                <isActive>false</isActive>
                <label>CDNO –Contingency did not occur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>