unpackaged/main/default/objects/Account/fields/Expected_Value_3FY_Account__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value_3FY_Account__c</fullName>
    <description>Not being calculated - deprecate</description>
    <inlineHelpText>Account's cumulative expected value for current and next 2 FYs</inlineHelpText>
    <label>DEL_3FY Expected Value Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>