unpackaged/main/default/objects/Account/fields/First_Gift_Date_EDFaccount__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date_EDFaccount__c</fullName>
    <description>Date of the first gift from this account. Compares First Gift Date for all related contacts and grabs the earliest. Includes hard and soft credits; excludes planned gifts. Calculated in Snowflake and pushed into Salesforce when there's a qualifying change.</description>
    <inlineHelpText>The oldest received hard or soft credit ‘Close Date’ for all contacts in this account (excludes Planned Gifts)</inlineHelpText>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>