unpackaged/main/default/objects/Account/fields/First_Gift_Date_Hard_Credit__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date_Hard_Credit__c</fullName>
    <label>DEL_First Gift Date (Hard Credit)</label>
    <type>Date</type>
</CustomField>