unpackaged/main/default/objects/Account/fields/First_year_at_home_address__c.field-meta.xml
<CustomField>
    <fullName>First_year_at_home_address__c</fullName>
    <description>First year at primary home address. Used to calculate length of residence</description>
    <inlineHelpText>First year at primary home address. Used to calculate length of residence</inlineHelpText>
    <label>First year at home address</label>
    <length>4</length>
    <type>Text</type>
</CustomField>