unpackaged/main/default/objects/Account/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <description>Name of fund within Account - for DAFs, etc.</description>
    <inlineHelpText>Name of fund within Account - for DAFs, etc.</inlineHelpText>
    <label>Fund Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>