unpackaged/main/default/objects/Account/fields/Gift_Count_Score__c.field-meta.xml
<CustomField>
    <fullName>Gift_Count_Score__c</fullName>
    <description>Calculates score based on number of gifts made by HH members in last calendar year.</description>
    <formula>CASE (of_Donations_Last_1_Years__c, 0, 0, 1, 3, 2, 3, 3, 2, 4, 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0=0; 1 or 2=3; 3 or 4=2; 5 or more =1</inlineHelpText>
    <label>Gift Count Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>