unpackaged/main/default/objects/Account/fields/Giving_History_Report__c.field-meta.xml
<CustomField>
    <fullName>Giving_History_Report__c</fullName>
    <description>Dynamic filter report that passes the ID of the record it's clicked from. Stakeholders can manage the report filter logic.</description>
    <formula>HYPERLINK("/lightning/r/Report/00O8W000007g7T1UAI/view?fv0=" &amp; Id , "Giving History Report" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Report containing all of the Account's hard and soft credits for received and projected Opportunities.</inlineHelpText>
    <label>Donor Gifts and Projections</label>
    <type>Text</type>
</CustomField>