unpackaged/main/default/objects/Account/fields/Grant_Reporting_Website__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reporting_Website__c</fullName>
    <label>Grant Reporting Website</label>
    <type>Url</type>
</CustomField>