unpackaged/main/default/objects/Account/fields/Has_Donor_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Has_Donor_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record has a donor proxy contact. Used in flow and sdg.</description>
    <inlineHelpText>Record has a donor proxy contact. Used in flow and sdg.</inlineHelpText>
    <label>Has Donor Proxy</label>
    <type>Checkbox</type>
</CustomField>