unpackaged/main/default/objects/Account/fields/High_Volume_Placeholder_Account__c.field-meta.xml
<CustomField>
    <fullName>High_Volume_Placeholder_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is a Placeholder Account with a high volume of related Opportunities and it can be suppressed from reports as needed.</inlineHelpText>
    <label>High Volume Placeholder Account</label>
    <type>Checkbox</type>
</CustomField>