unpackaged/main/default/objects/Account/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Household Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>