unpackaged/main/default/objects/Account/fields/Household_Member_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Household_Member_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked via the "Household Account Deceased Update" flow when one or more members of the household are deceased. Used to surface a message on the household record page that says, "A Member of this Household is Deceased"</description>
    <inlineHelpText>One or more members of the household are deceased.</inlineHelpText>
    <label>Household Member Deceased</label>
    <type>Checkbox</type>
</CustomField>