unpackaged/main/default/objects/Account/fields/HPC_25__c.field-meta.xml
<CustomField>
    <fullName>HPC_25__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HPC increase by 25% or more</description>
    <label>HPC + 25%</label>
    <type>Checkbox</type>
</CustomField>