unpackaged/main/default/objects/Account/fields/HPC_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>HPC_Date_Account__c</fullName>
    <description>Date of the constituent's highest previous donation</description>
    <inlineHelpText>The Close Date of the received Opportunity with the highest Amount on this Account (Planned Gifts not included).</inlineHelpText>
    <label>HPC Date</label>
    <type>Date</type>
</CustomField>