unpackaged/main/default/objects/Account/fields/Inactive_Office__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This was from when we wanted to put Elected Officials in SF, now that PA uses Quorum we're not using this function.</description>
    <label>DEL_Inactive Office</label>
    <type>Checkbox</type>
</CustomField>