unpackaged/main/default/objects/Account/fields/Inclination__c.field-meta.xml
<CustomField>
    <fullName>Inclination__c</fullName>
    <label>Inclination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>