unpackaged/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Components</fullName>
            </value>
            <value>
                <fullName>Automobiles</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Thrifts &amp; Mortgage Finance</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Electrical Equipment</fullName>
            </value>
            <value>
                <fullName>Industrial Conglomerates</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Trading Companies &amp; Distributors</fullName>
            </value>
            <value>
                <fullName>Commercial Services &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Household Durables</fullName>
            </value>
            <value>
                <fullName>Leisure Products</fullName>
            </value>
            <value>
                <fullName>Textiles, Apparel &amp; Luxury Goods</fullName>
            </value>
            <value>
                <fullName>Diversified Consumer Services</fullName>
            </value>
            <value>
                <fullName>Hotels, Restaurants &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Consumer Finance</fullName>
            </value>
            <value>
                <fullName>Diversified Financial Services</fullName>
            </value>
            <value>
                <fullName>Mortgage Real Estate Investment Trusts (REITs)</fullName>
            </value>
            <value>
                <fullName>Energy Equipment &amp; Services</fullName>
            </value>
            <value>
                <fullName>Oil, Gas &amp; Consumable Fuels</fullName>
            </value>
            <value>
                <fullName>Food &amp; Staples Retailing</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Food Products</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
            <value>
                <fullName>Health Care Equipment &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Health Care Providers &amp; Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>