unpackaged/main/default/objects/Account/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobiles &amp; Components</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>Commercial &amp; Professional Services</fullName>
            </value>
            <value>
                <fullName>Consumer Durables &amp; Apparel</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Diversified Financials</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Food &amp; Staples Retailing</fullName>
            </value>
            <value>
                <fullName>Food, Beverage &amp; Tobacco</fullName>
            </value>
            <value>
                <fullName>Health Care Equipment &amp; Services</fullName>
            </value>
            <value>
                <fullName>Household &amp; Personal Products</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals, Biotechnology &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retailing</fullName>
            </value>
            <value>
                <fullName>Semiconductors &amp; Semiconductor Equipment</fullName>
            </value>
            <value>
                <fullName>Software &amp; Services</fullName>
            </value>
            <value>
                <fullName>Technology Hardware &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Telecommunication Services</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>