unpackaged/main/default/objects/Account/fields/LCRM_Address_Correction_Status__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Address_Correction_Status__c</fullName>
    <description>Indicates if the address was standardized through a mass process in LCRM. Is under consideration to repurpose in NPSP.</description>
    <label>LCRM Address Standardization Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>