unpackaged/main/default/objects/Account/fields/LCRM_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_By__c</fullName>
    <description>Legacy field that tracks the name of the person who last modified the record in Luminate CRM. Cutover from LCRM to Salesforce NPSP was 5/23/22.</description>
    <label>LCRM Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>