unpackaged/main/default/objects/Account/fields/LCRM_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_Date__c</fullName>
    <description>Legacy field that tracks the date the record was last modified in Luminate CRM. Cutover from LCRM to Salesforce NPSP was 5/23/22.</description>
    <label>LCRM Last Modified Date</label>
    <type>DateTime</type>
</CustomField>