unpackaged/main/default/objects/Account/fields/Legacy_Source_Table__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Table__c</fullName>
    <label>Legacy Source Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>