unpackaged/main/default/objects/Account/fields/Lifetime_Gift_Count_Acc__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Gift_Count_Acc__c</fullName>
    <description>Count of the number of received gifts (excl. Planned Gifts). Calculated in Snowflake and pushed into Salesforce nightly whenever there's a qualifying change.</description>
    <inlineHelpText>The total count of all received Opportunities where the Account has a hard or soft credit. (Planned Gifts excluded).</inlineHelpText>
    <label>Lifetime Gift Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>