unpackaged/main/default/objects/Account/fields/Matching_Gift_Account_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Account_ID_Number__c</fullName>
    <description>Store account ID/number.</description>
    <inlineHelpText>Enter EDF account ID/number for Matching Gift portal.</inlineHelpText>
    <label>Matching Gift Account ID/Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>