unpackaged/main/default/objects/Account/fields/Matching_Gift_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Additional_Details__c</fullName>
    <description>Store additional login or other details.</description>
    <inlineHelpText>Enter additional login of other details.</inlineHelpText>
    <label>Matching Gift Additional Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>