unpackaged/main/default/objects/Account/fields/Matching_Gift_Password__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Password__c</fullName>
    <description>Store EDF password for Matching Gift portal.</description>
    <inlineHelpText>Enter the EDF password for Matching Gift portal.</inlineHelpText>
    <label>Matching Gift Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>