unpackaged/main/default/objects/Account/fields/Matching_Gift_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_User_ID__c</fullName>
    <description>Store login ID for Matching Gift portal.</description>
    <inlineHelpText>Enter login ID for Matching Gift portal.</inlineHelpText>
    <label>Matching Gift User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>