unpackaged/main/default/objects/Account/fields/Minority_Business_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Minority_Business_Enterprise__c</fullName>
    <label>DEL_Minority Business Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>