unpackaged/main/default/objects/Account/fields/MRC_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>MRC_Date_Account__c</fullName>
    <description>Captures the Close Date of the most recently received Opportunity. If there are multiple qualifying gifts, the largest one wins. Includes hard and soft credits, excludes Planned Gifts. Calculated externally by IT Data team and pushed into Salesforce nightly after qualifying changes.</description>
    <inlineHelpText>The Close Date of the most recent received Opportunity where the Account has a hard or soft credit (excludes Planned Gifts).</inlineHelpText>
    <label>MRC Date</label>
    <type>Date</type>
</CustomField>