unpackaged/main/default/objects/Account/fields/No_C4_Communication__c.field-meta.xml
<CustomField>
    <fullName>No_C4_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only displayed on non-Household Accounts, because for Households we keep this information on the individual Contacts. So only the data on non-Household Accounts should be used.</description>
    <inlineHelpText>As requested by the organization. Includes stopping EDF Action PAC communications. Each EDF department determines whether this applies to only their mail or to all channels, and how this applies to acknowledging donations and actions.</inlineHelpText>
    <label>No C4 Communication</label>
    <type>Checkbox</type>
</CustomField>