unpackaged/main/default/objects/Account/fields/No_Exchange_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Exchange_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only displayed on non-Household Accounts, because for Households we keep this information on the individual Contacts. So only the data on non-Household Accounts should be used.</description>
    <inlineHelpText>As requested by this organization, EDF does not exchange the organization's name with other organizations as part of membership acquisition strategies.</inlineHelpText>
    <label>No Exchange</label>
    <type>Checkbox</type>
</CustomField>