unpackaged/main/default/objects/Account/fields/No_Invitations_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Invitations_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only displayed on non-Household Accounts, because for Households we keep this information on the individual Contacts. So only the data on non-Household Accounts should be used.</description>
    <inlineHelpText>As requested by the organization. Each EDF department determines what this applies to.</inlineHelpText>
    <label>No Invitations</label>
    <type>Checkbox</type>
</CustomField>